Replaced the terrain splatting method by a terrain pager
Made:
	- Added terrain pager class with CTerrain class
	- Fixed some bugs for terrain pager

To Do:
	- Fix c8** pointers bugs in terrain pager
		- Replace by an array of stringc

--- a/.gitignore
+++ b/.gitignore
@@ -2967,3 +2967,37 @@ SSWE/Renders/LRussianTree.jpg
 SSWEProject/SSWECore/ClassDiagram.cd
 SSWE/data/JESSE/sword_texture.png
 SSWE/data/JESSE/weapon_sword.mtl
+SSWE/Big Height Maps/heightmaps/map1.png
+SSWE/Big Height Maps/heightmaps/map10.png
+SSWE/Big Height Maps/heightmaps/map11.png
+SSWE/Big Height Maps/heightmaps/map12.png
+SSWE/Big Height Maps/heightmaps/map13.png
+SSWE/Big Height Maps/heightmaps/map14.png
+SSWE/Big Height Maps/heightmaps/map15.png
+SSWE/Big Height Maps/heightmaps/map16.png
+SSWE/Big Height Maps/heightmaps/map2.png
+SSWE/Big Height Maps/heightmaps/map3.png
+SSWE/Big Height Maps/heightmaps/map4.png
+SSWE/Big Height Maps/heightmaps/map5.png
+SSWE/Big Height Maps/heightmaps/map6.png
+SSWE/Big Height Maps/heightmaps/map7.png
+SSWE/Big Height Maps/heightmaps/map8.png
+SSWE/Big Height Maps/heightmaps/map9.png
+SSWE/Big Height Maps/heightmaps/Thumbs.db
+SSWE/Big Height Maps/textures/color1.png
+SSWE/Big Height Maps/textures/color10.png
+SSWE/Big Height Maps/textures/color11.png
+SSWE/Big Height Maps/textures/color12.png
+SSWE/Big Height Maps/textures/color13.png
+SSWE/Big Height Maps/textures/color14.png
+SSWE/Big Height Maps/textures/color15.png
+SSWE/Big Height Maps/textures/color16.png
+SSWE/Big Height Maps/textures/color2.png
+SSWE/Big Height Maps/textures/color3.png
+SSWE/Big Height Maps/textures/color4.png
+SSWE/Big Height Maps/textures/color5.png
+SSWE/Big Height Maps/textures/color6.png
+SSWE/Big Height Maps/textures/color7.png
+SSWE/Big Height Maps/textures/color8.png
+SSWE/Big Height Maps/textures/color9.png
+SSWE/Big Height Maps/textures/Thumbs.db
