Fixed Clonation and some User Interfaces
Made:
	- Fixed Clonation for terrains, trees and objects
	- Fixed some User Interfaces (Visual)

To Do:
	- Work on terrains (for terrain painting)

--- a/.gitignore
+++ b/.gitignore
@@ -3001,3 +3001,62 @@ SSWE/Big Height Maps/textures/color7.png
 SSWE/Big Height Maps/textures/color8.png
 SSWE/Big Height Maps/textures/color9.png
 SSWE/Big Height Maps/textures/Thumbs.db
+SSWE/data/Turbo/exosuit_final_lowres/.DS_Store
+SSWE/data/Turbo/exosuit_final_lowres/textures/ammobox_bmp.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/ammobox_diffuse.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/ammobox_spec.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Arms_Armor_Diffuse.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Arms_Armor_Spec.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/arms_normals.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/avenger_bmp.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/avenger_diffuse.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/avenger_drum.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/avenger_drum_spec.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/avenger_spec.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/back_unit_diffuse.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/back_unit_normals2.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/back_unit_spec.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/bg.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/debri_bmp.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/debri_diff.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Generic.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Generic_Spec.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Legs_Armor_Diffuse.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Legs_Armor_Spec.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/legs_normals.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/mechanicdetail.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/mechanicdetail_bmp.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/metal_storm_diffuse.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/metal_storm_spec.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/metal_stormd_bmp.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/pillar_diffuse.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/pillar_spec.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/pillarnormals.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Structure_limbs_bmp.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Structure_limbs_diffuse.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/structure_limbs_normalsd.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Structure_limbs_spec.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Structure_torso_bmp.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Structure_torso_diffuse.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Structure_torso_spec.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/targeting_pods_bmp.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/targeting_pods_diffuse.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/targeting_pods_spec.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Textures_arms_bmp.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Textures_legs_bmp.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Thumbs.db
+SSWE/data/Turbo/exosuit_final_lowres/textures/Torso_Armor_BMP.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Torso_Armor_Diffuse.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Torso_Armor_Spec.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Torso_Pod_Normals.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/Torso_Structure_Normals.png
+SSWE/data/Turbo/exosuit_final_lowres/textures/undergrass.png
+SSWE/data/Turbo/exosuit_final_lowres/untitled.mtl
+SSWE/data/Turbo/exosuit_final_lowres/x/.DS_Store
+SSWE/data/Turbo/exosuit_final_lowres/x/exosuit.x
+SSWE/data/Turbo/futuristic_combat_jet/.DS_Store
+SSWE/data/Turbo/futuristic_combat_jet/Futuristic combat jet.mtl
+SSWE/data/Turbo/futuristic_combat_jet/textures/Aircraft C.jpg
+SSWE/data/Turbo/futuristic_combat_jet/textures/Aircraft N.jpg
+SSWE/data/Turbo/futuristic_combat_jet/textures/Aircraft S.jpg
+SSWE/data/Turbo/futuristic_combat_jet/textures/REF 1.jpg
