Added Depth Of Field Edition Window
Made:
	- Prepared PSSM Shaders for effects
	- Added Terrain Generation window
	- Fixed some bugs into Terrain Painting
	- Added Height Map Terrains structure
	- Added some CORE functions

To Do:
	- Continue Terrain Painting
	- Develop random hills when creating a new terrain
	- Work on PSSM Shadows

--- a/.gitignore
+++ b/.gitignore
@@ -3060,3 +3060,162 @@ SSWE/data/Turbo/futuristic_combat_jet/textures/Aircraft C.jpg
 SSWE/data/Turbo/futuristic_combat_jet/textures/Aircraft N.jpg
 SSWE/data/Turbo/futuristic_combat_jet/textures/Aircraft S.jpg
 SSWE/data/Turbo/futuristic_combat_jet/textures/REF 1.jpg
+SSWE/data/Turbo/futuristic_combat_jet/textures/Thumbs.db
+SSWE/data/Turbo/UDKMap/EngineMaterials_DefaultMaterial_D.bmp
+SSWE/data/Turbo/UDKMap/EngineMaterials_DefaultMaterial_N.bmp
+SSWE/data/Turbo/UDKMap/EngineMaterials_DefaultMaterial_S.bmp
+SSWE/data/Turbo/UDKMap/ExampleMap.mtl
+SSWE/data/Turbo/UDKMap/ExampleMap_Resources_Translucent_Red_D.bmp
+SSWE/data/Turbo/UDKMap/ExampleMap_Resources_Translucent_Red_N.bmp
+SSWE/data/Turbo/UDKMap/ExampleMap_Resources_Translucent_Red_S.bmp
+SSWE/data/Turbo/UDKMap/Flash_Resources_Textures_bomb_ui_m_D.bmp
+SSWE/data/Turbo/UDKMap/Flash_Resources_Textures_bomb_ui_m_N.bmp
+SSWE/data/Turbo/UDKMap/Flash_Resources_Textures_bomb_ui_m_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Base_BSP_M_HU_Base_BSP_Bronze01_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Base_BSP_M_HU_Base_BSP_Bronze01_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Base_BSP_M_HU_Base_BSP_Bronze01_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Deck_SM_Materials_M_HU_Deck_SM_BioPot_Mat_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Deck_SM_Materials_M_HU_Deck_SM_BioPot_Mat_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Deck_SM_Materials_M_HU_Deck_SM_BioPot_Mat_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Deck_SM_Materials_M_HU_Deck_SM_Fwindow_Glass_Mat_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Deck_SM_Materials_M_HU_Deck_SM_Fwindow_Glass_Mat_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Deck_SM_Materials_M_HU_Deck_SM_Fwindow_Glass_Mat_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco_Pipes_SM_Materials_M_HU_Deco_Pipes_SM_Pipe01_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco_Pipes_SM_Materials_M_HU_Deco_Pipes_SM_Pipe01_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco_Pipes_SM_Materials_M_HU_Deco_Pipes_SM_Pipe01_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco_Pipes_SM_Materials_M_HU_Deco_Pipes_SM_PipeSetB_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco_Pipes_SM_Materials_M_HU_Deco_Pipes_SM_PipeSetB_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco_Pipes_SM_Materials_M_HU_Deco_Pipes_SM_PipeSetB_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco_SM_Materials_M_HU_Deco_SM_Chainlink02_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco_SM_Materials_M_HU_Deco_SM_Chainlink02_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco_SM_Materials_M_HU_Deco_SM_Chainlink02_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco_SM_Materials_M_HU_Deco_SM_Rubble03b_Master_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco_SM_Materials_M_HU_Deco_SM_Rubble03b_Master_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco_SM_Materials_M_HU_Deco_SM_Rubble03b_Master_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco3_SM_Materials_M_HU_Deco_SM_GasTanks01_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco3_SM_Materials_M_HU_Deco_SM_GasTanks01_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco3_SM_Materials_M_HU_Deco_SM_GasTanks01_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco3_SM_Materials_M_HU_Deco_SM_HydraulicSupport_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco3_SM_Materials_M_HU_Deco_SM_HydraulicSupport_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco3_SM_Materials_M_HU_Deco_SM_HydraulicSupport_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco3_SM_Materials_M_HU_Deco_SM_Machinery04Alt_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco3_SM_Materials_M_HU_Deco_SM_Machinery04Alt_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco3_SM_Materials_M_HU_Deco_SM_Machinery04Alt_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco3_SM_Materials_M_HU_Deco_SM_StorageTanks_a_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco3_SM_Materials_M_HU_Deco_SM_StorageTanks_a_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Deco3_SM_Materials_M_HU_Deco_SM_StorageTanks_a_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Doors_SM_Materials_M_HU_Doors_SM_BlastDoors_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Doors_SM_Materials_M_HU_Doors_SM_BlastDoors_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Doors_SM_Materials_M_HU_Doors_SM_BlastDoors_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Floors_SM_Materials_M_HU_Floors_SM_FireEscapeStairs_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Floors_SM_Materials_M_HU_Floors_SM_FireEscapeStairs_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Floors_SM_Materials_M_HU_Floors_SM_FireEscapeStairs_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Light3_SM_Materials_M_HU_Light_SM_WallLight01_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Light3_SM_Materials_M_HU_Light_SM_WallLight01_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Light3_SM_Materials_M_HU_Light_SM_WallLight01_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Mech_Material_M_HU_Mech_SM_Light01_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Mech_Material_M_HU_Mech_SM_Light01_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Mech_Material_M_HU_Mech_SM_Light01_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Supports_SM_Materials_M_HU_Supports_SM_Girder01_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Supports_SM_Materials_M_HU_Supports_SM_Girder01_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Supports_SM_Materials_M_HU_Supports_SM_Girder01_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Supports_SM_Materials_M_HU_Supports_SM_IbeamA_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Supports_SM_Materials_M_HU_Supports_SM_IbeamA_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Supports_SM_Materials_M_HU_Supports_SM_IbeamA_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Trim2_SM_Materials_M_HU_Trim_SM_Low_ProfileE_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Trim2_SM_Materials_M_HU_Trim_SM_Low_ProfileE_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Trim2_SM_Materials_M_HU_Trim_SM_Low_ProfileE_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Trim2_SM_Materials_M_HU_Trim_SM_LowProfileA_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Trim2_SM_Materials_M_HU_Trim_SM_LowProfileA_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Trim2_SM_Materials_M_HU_Trim_SM_LowProfileA_S.bmp
+SSWE/data/Turbo/UDKMap/HU_Trim2_SM_Materials_M_HU_Trim_SM_LowProfileB-D_D.bmp
+SSWE/data/Turbo/UDKMap/HU_Trim2_SM_Materials_M_HU_Trim_SM_LowProfileB-D_N.bmp
+SSWE/data/Turbo/UDKMap/HU_Trim2_SM_Materials_M_HU_Trim_SM_LowProfileB-D_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Bridge_SM_Materials_M_LT_Bridge_SM_Bridge01_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Bridge_SM_Materials_M_LT_Bridge_SM_Bridge01_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Bridge_SM_Materials_M_LT_Bridge_SM_Bridge01_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Bridge_SM_Materials_MI_LT_Bridge_SM_Chasm_Static2_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Bridge_SM_Materials_MI_LT_Bridge_SM_Chasm_Static2_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Bridge_SM_Materials_MI_LT_Bridge_SM_Chasm_Static2_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Buildings2_BSP_Materials_M_LT_Buildings_BSP_Bunkerwall1a_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Buildings2_BSP_Materials_M_LT_Buildings_BSP_Bunkerwall1a_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Buildings2_BSP_Materials_M_LT_Buildings_BSP_Bunkerwall1a_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Buildings2_BSP_Materials_MI_LT_Buildings_BSP_BunkerWall1_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Buildings2_BSP_Materials_MI_LT_Buildings_BSP_BunkerWall1_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Buildings2_BSP_Materials_MI_LT_Buildings_BSP_BunkerWall1_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Doors_SM_Materials_M_LT_Doors_SM_Door04_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Doors_SM_Materials_M_LT_Doors_SM_Door04_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Doors_SM_Materials_M_LT_Doors_SM_Door04_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Doors_SM_Materials_MI_LT_Doors_SM_Door01_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Doors_SM_Materials_MI_LT_Doors_SM_Door01_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Doors_SM_Materials_MI_LT_Doors_SM_Door01_NoGlow_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Doors_SM_Materials_MI_LT_Doors_SM_Door01_NoGlow_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Doors_SM_Materials_MI_LT_Doors_SM_Door01_NoGlow_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Doors_SM_Materials_MI_LT_Doors_SM_Door01_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_BSP_Materials_M_LT_Floors_BSP_Organic05b_TileBreak_NoBump_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_BSP_Materials_M_LT_Floors_BSP_Organic05b_TileBreak_NoBump_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_BSP_Materials_M_LT_Floors_BSP_Organic05b_TileBreak_NoBump_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_BSP_Materials_M_LT_Floors_BSP_Organic15b_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_BSP_Materials_M_LT_Floors_BSP_Organic15b_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_BSP_Materials_M_LT_Floors_BSP_Organic15b_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_SM_Materials_M_LT_Floors_SM_Walkpipe01_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_SM_Materials_M_LT_Floors_SM_Walkpipe01_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_SM_Materials_M_LT_Floors_SM_Walkpipe01_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_SM_Materials_MI_LT_Floors_SM_FloorCeiling_Bridge_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_SM_Materials_MI_LT_Floors_SM_FloorCeiling_Bridge_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_SM_Materials_MI_LT_Floors_SM_FloorCeiling_Bridge_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_SM_Materials_MI_LT_Floors_SM_FloorCeiling_Simple_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_SM_Materials_MI_LT_Floors_SM_FloorCeiling_Simple_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Floors_SM_Materials_MI_LT_Floors_SM_FloorCeiling_Simple_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Light_SM_Materials_M_LT_Light_SM_Fluorescent01_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Light_SM_Materials_M_LT_Light_SM_Fluorescent01_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Light_SM_Materials_M_LT_Light_SM_Fluorescent01_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Light_SM_Materials_M_LT_Light_SM_Light01_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Light_SM_Materials_M_LT_Light_SM_Light01_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Light_SM_Materials_M_LT_Light_SM_Light01_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Mech_SM_Materials_M_LT_Mech_SM_CityBlock1_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Mech_SM_Materials_M_LT_Mech_SM_CityBlock1_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Mech_SM_Materials_M_LT_Mech_SM_CityBlock1_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Mech_SM_Materials_M_LT_Mech_SM_Cratebox02_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Mech_SM_Materials_M_LT_Mech_SM_Cratebox02_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Mech_SM_Materials_M_LT_Mech_SM_Cratebox02_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Mech_SM_Materials_M_LT_Mech_SM_Megaring01_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Mech_SM_Materials_M_LT_Mech_SM_Megaring01_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Mech_SM_Materials_M_LT_Mech_SM_Megaring01_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Mech_SM_Materials_M_LT_Mech_SM_Techcylinder01_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Mech_SM_Materials_M_LT_Mech_SM_Techcylinder01_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Mech_SM_Materials_M_LT_Mech_SM_Techcylinder01_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Support_SM_Materials_M_LT_Supports_SM_YBeam_1_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Support_SM_Materials_M_LT_Supports_SM_YBeam_1_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Support_SM_Materials_M_LT_Supports_SM_YBeam_1_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Trims_SM_Materials_MI_LT_Trims_SM_Railing01_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Trims_SM_Materials_MI_LT_Trims_SM_Railing01_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Trims_SM_Materials_MI_LT_Trims_SM_Railing01_S.bmp
+SSWE/data/Turbo/UDKMap/LT_Walls_SM_Materials_M_LT_Walls_SM_Winframes01_D.bmp
+SSWE/data/Turbo/UDKMap/LT_Walls_SM_Materials_M_LT_Walls_SM_Winframes01_N.bmp
+SSWE/data/Turbo/UDKMap/LT_Walls_SM_Materials_M_LT_Walls_SM_Winframes01_S.bmp
+SSWE/data/Turbo/UDKMap/NEC_Wires_SM_Materials_M_NEC_Wires_SM_Pipecap01_D.bmp
+SSWE/data/Turbo/UDKMap/NEC_Wires_SM_Materials_M_NEC_Wires_SM_Pipecap01_N.bmp
+SSWE/data/Turbo/UDKMap/NEC_Wires_SM_Materials_M_NEC_Wires_SM_Pipecap01_S.bmp
+SSWE/data/Turbo/UDKMap/NEC_Wires_SM_Materials_M_NEC_Wires_SM_Thinwire01_D.bmp
+SSWE/data/Turbo/UDKMap/NEC_Wires_SM_Materials_M_NEC_Wires_SM_Thinwire01_N.bmp
+SSWE/data/Turbo/UDKMap/NEC_Wires_SM_Materials_M_NEC_Wires_SM_Thinwire01_S.bmp
+SSWE/data/Turbo/UDKMap/NEC_Wires_SM_Materials_M_NEC_Wires_SM_Twistwire01_D.bmp
+SSWE/data/Turbo/UDKMap/NEC_Wires_SM_Materials_M_NEC_Wires_SM_Twistwire01_N.bmp
+SSWE/data/Turbo/UDKMap/NEC_Wires_SM_Materials_M_NEC_Wires_SM_Twistwire01_S.bmp
+SSWE/data/Turbo/UDKMap/PhysTest_Resources_ClothMaterial_D.bmp
+SSWE/data/Turbo/UDKMap/PhysTest_Resources_ClothMaterial_N.bmp
+SSWE/data/Turbo/UDKMap/PhysTest_Resources_ClothMaterial_S.bmp
+SSWE/data/Turbo/UDKMap/PhysTest_Resources_Remade_Barrel_Mat_D.bmp
+SSWE/data/Turbo/UDKMap/PhysTest_Resources_Remade_Barrel_Mat_N.bmp
+SSWE/data/Turbo/UDKMap/PhysTest_Resources_Remade_Barrel_Mat_S.bmp
+SSWE/data/Turbo/UDKMap/Pickups_Ammo_Rockets_Materials_M_Ammo_RocketLauncher_D.bmp
+SSWE/data/Turbo/UDKMap/Pickups_Ammo_Rockets_Materials_M_Ammo_RocketLauncher_N.bmp
+SSWE/data/Turbo/UDKMap/Pickups_Ammo_Rockets_Materials_M_Ammo_RocketLauncher_S.bmp
+SSWE/data/Turbo/UDKMap/Thumbs.db
+SSWE/data/Turbo/UDKMap/UN_Misc_BSP_Materials_M_UN_Misc_BSP_FlourescentLight01_D.bmp
+SSWE/data/Turbo/UDKMap/UN_Misc_BSP_Materials_M_UN_Misc_BSP_FlourescentLight01_N.bmp
+SSWE/data/Turbo/UDKMap/UN_Misc_BSP_Materials_M_UN_Misc_BSP_FlourescentLight01_S.bmp
+SSWE/data/Turbo/UDKMap/UN_Sky_SM_Materials_M_UN_Sky_SM_Dome03_D.bmp
+SSWE/data/Turbo/UDKMap/UN_Sky_SM_Materials_M_UN_Sky_SM_Dome03_N.bmp
+SSWE/data/Turbo/UDKMap/UN_Sky_SM_Materials_M_UN_Sky_SM_Dome03_S.bmp
