--- a/SSWEProject/SSWELib/SSWELib.vcxproj.filters
+++ b/SSWEProject/SSWELib/SSWELib.vcxproj.filters
@@ -118,6 +118,9 @@
     <Filter Include="SSWELib\SceneNodes\Terrains">
       <UniqueIdentifier>{b19b81f9-6de4-4f71-947c-cb4b02b49656}</UniqueIdentifier>
     </Filter>
+    <Filter Include="SSWELib\Renders\DepthOfField">
+      <UniqueIdentifier>{70822ee8-74ca-4c9f-a87a-def908fe52e8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SSWELib.cpp">
@@ -338,6 +341,12 @@
     </ClCompile>
     <ClCompile Include="SSWELib\UserInterfaces\NodeFactory\CUITerrainPainter.cpp">
       <Filter>SSWELib\UserInterfaces\NodeFactory</Filter>
+    </ClCompile>
+    <ClCompile Include="SSWELib\UserInterfaces\NodeFactory\CUIWindowAddNewTerrain.cpp">
+      <Filter>SSWELib\UserInterfaces\NodeFactory</Filter>
+    </ClCompile>
+    <ClCompile Include="SSWELib\Renders\DepthOfField\CUIWindowEditDOF.cpp">
+      <Filter>SSWELib\Renders\DepthOfField</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -589,6 +598,12 @@
     </ClInclude>
     <ClInclude Include="SSWELib\UserInterfaces\NodeFactory\CUITerrainPainter.h">
       <Filter>SSWELib\UserInterfaces\NodeFactory</Filter>
+    </ClInclude>
+    <ClInclude Include="SSWELib\UserInterfaces\NodeFactory\CUIWindowAddNewTerrain.h">
+      <Filter>SSWELib\UserInterfaces\NodeFactory</Filter>
+    </ClInclude>
+    <ClInclude Include="SSWELib\Renders\DepthOfField\CUIWindowEditDOF.h">
+      <Filter>SSWELib\Renders\DepthOfField</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
